# Vision-Based-Aircraft-Inspection

./: .gitignore
src/lampo_description/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/lampo_description/config/: automan_mapping.yaml  bridge.yaml  joy.yaml  kinematics.yaml  nav_params_diff_1.yaml  nav_params_diff_2.yaml  nav_params_omni_1.yaml  nav_params_omni_2.yaml  ompl_planning.yaml  ur_alone.yaml  ur_controllers_1.yaml  ur_controllers_2.yaml
src/lampo_description/lampo_description/: arm.py  aruco_detect.py  ros_to_gz_commands.py
src/lampo_description/launch/: automan.launch.py  lampo_gz_diff.launch.py  lampo_gz_mm.launch.py  lampo_joy.launch.py  lampo_nav_diff.launch.py  lampo_nav_omni.launch.py  lampo_planner_diff.launch.py  lampo_planner_omni.launch.py  mapping.launch.py  scratch.launch.py
src/lampo_description/map/: map.pgm  map.yaml  map_old.pgm  map_old.yaml
src/lampo_description/meshes/: april.dae  checker.dae
src/lampo_description/meshes/components/CargoPanelLower/: CargoPanelLower.stl
src/lampo_description/meshes/components/Hatrack/: model.sdf  (+1 more)
src/lampo_description/models/: Aircraftbodydesign.stl
src/lampo_description/rviz/: config.rviz  config2.rviz
src/lampo_description/srdf/: lampo.srdf.xacro  lampo_macro.srdf.xacro
src/lampo_description/urdf/: april.urdf.xacro  checker.urdf.xacro  system.urdf.xacro
src/lampo_description/urdf/sweepee/: camera.urdf.xacro  sweepee_diff.xacro  sweepee_omni.xacro
src/lampo_description/worlds/: airplane.sdf  airplane_scratched.sdf  warehouse_big.sdf  warehouse_full.sdf  world.world
(+32 files in other folders)
