<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lampo_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stefano.mutti@stiima.cnr.it">kolmogorov</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <build_depend>ur_description</build_depend>
  <exec_depend>ur_description</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>topic_based_ros2_control</exec_depend>
  

  <export>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/meshes"/> -->
    <gazebo_ros gazebo_model_path="${prefix}/.." /> 
    <gazebo_ros gazebo_media_path="${prefix}/meshes"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
